<resources>
    <string name="app_name">SharingApp</string>
    <string name="label">Label</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="content_description_media">Image</string>
    <string name="title">Title</string>
    <string name="des">Description</string>
    <string name="share">Share</string>
    <string name="email">Enter Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error">Password must be 8 characters</string>
    <string name="error_email">Invalid e-mail</string>
    <string name="error_nama">Name cannot be empty</string>
    <string name="already_login">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="logout">"Logout</string>
    <string name="add_post">Add Post</string>
    <string name="createdAt">Created At</string>
    <string name="updatedAt">Updated At</string>
    <string name="laLon">Lantitude Longitude</string>
    <string name="errorDetail">Failed to fetch story data from intent</string>
    <string name="addDes">Add Description</string>
    <string name="addStory">Add Story</string>
    <string name="camera">Camera</string>
    <string name="transitionImage">Image</string>
    <string name="lastUpload">Last upload a few seconds ago</string>
    <string name="lastUploadOne">Last upload 1 minute ago</string>
    <string name="lastUploadMinute">Last upload %d minutes ago</string>
    <string name="lastUploadHour">Last upload 1 hour ago</string>
    <string name="lastUploadHours">Last upload %d hours ago</string>
    <string name="selectPicture">Select Image</string>
    <string name="noPerimission">Did not get permissions.</string>
    <string name="fillField">Please fill in all fields</string>
    <string name="failedTakePicture">Failed to take picture.</string>
    <string name="failedShowCamera">Failed to bring up the camera.</string>
    <string name="loginFailed">Login failed</string>
    <string name="invalidPassowordOrEmail">Incorrect email or password</string>
    <string name="login_disabled">Blank Form</string>
    <string name="emptyField">Username and password cannot be empty</string>
    <string name="errorPassword">Password cannot be empty</string>
    <string name="appwidget_text">Story</string>
    <string name="add_widget">Add Widget</string>
    <string name="app_widget_description">This is the app widget description</string>
    <string name="empty_text">Empty Text</string>
    <string name="splash">Dicoding Academy</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="retry">Try Again</string>
    <string name="translate">Change Language</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="style_map">Change Style Map</string>
    <string name="shareLoc">Share Location</string>
    <string name="type_map">Type Map</string>
    <string name="normal_type_map">Normal</string>
    <string name="satellite_type_map">Satellite</string>
    <string name="terrain_type_map">Terrain</string>
</resources>