<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:transitionName="@string/transitionImage"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:transitionName="@string/name"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des"
            android:transitionName="@string/des"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/createdAtTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createdAt"
            android:transitionName="@string/createdAt"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/latLonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laLon"
            android:transitionName="@string/laLon"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

